-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.9.1
-
Windows 11
-
-
072bf40fe (dev), 51e180da6 (6.10), 4016fbb87 (6.9), 460d1efb5 (tqtc/lts-6.8)
When running the attached project QtColors.zip on Windows 11, the background color for the QPlainTextEdit widget without border is not set, as seen in Win11.png (Widget on the right):
Background should be green.
Background is blue (background of parent widget).
The background color is correct for the same widget with border.
The background color is also correct (in all cases) on Windows 10 (see Win10.png)
Probably related to QTBUG-128781
- relates to
-
QTBUG-138401 [REG dev] Windows11 Style: Check-boxes' drawing regression
-
- Closed
-
- resulted in
-
QTBUG-141819 [Reg 6.8.4->6.8.5] Setting background-color in the StyleSheet causes the QTextEdit border not to render properly with the Windows 11 style.
-
- Closed
-