Windows11Style: don't modify palette for QAbstractScrollArea

Don't modify the palette just to make sure the background of the
viewport does not overdraw the widget's frame. Use
setAutoFillBackground(false) instead as the style paints the whole area
by itself so it's not needed to rely on a clean paint area.

Pick-to: 6.9 6.8
Fixes: QTBUG-139051
Task-number: QTBUG-138401
Change-Id: Iaba0c82eaeeefec3e4ad79804df78a14bac9a3a6
Reviewed-by: Nodir Temirkhodjaev <nodir.temir@gmail.com>
Reviewed-by: Wladimir Leuschner <wladimir.leuschner@qt.io>
(cherry picked from commit 072bf40fe9597bdd910bb0c1e6a754c1a468b844)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>